<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/black"
        android:gravity="center"
        tools:context=".MainActivity">



        <ImageView
            android:layout_width="334dp"
            android:layout_height="334dp"
            android:src="@drawable/logo"
            android:layout_marginTop="-5dp"/>

        <EditText
            android:id="@+id/EditTextEmail"
            android:layout_width="334dp"
            android:layout_height="wrap_content"
            android:hint="DIGITE AQUI SEU EMAIL"
            android:background="@color/white"
            android:maxLines="1"
            android:inputType="text"
            android:gravity="center"
            android:padding="15dp"
            android:layout_marginTop="80dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp" />

        <EditText
            android:id="@+id/EditTextSenha"
            android:layout_width="334dp"
            android:layout_height="wrap_content"
            android:hint="@string/senha"
            android:background="@color/white"
            android:maxLines="1"
            android:inputType="numberPassword"
            android:gravity="center"
            android:padding="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp" />

        <Button
            android:id="@+id/bt_cadastro"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/text_botao"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:padding="15dp"
            app:cornerRadius="15dp"
            android:backgroundTint="@color/teal_700"
            android:layout_marginTop="20dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="20dp" />

        <TextView
            android:id="@+id/text_link_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mensagem_login"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>