<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"

        tools:context=".MainActivity">

        <TextView
            android:id="@+id/txtbem_vindo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mensagem_inicio"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <SearchView
            android:id="@+id/pesquisa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:queryHint="pesquisar.."
            android:background="@color/white"
            android:layout_margin="20dp"
            app:layout_constraintTop_toBottomOf="@id/txtbem_vindo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tdsservicos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mensagem_inicio1"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:gravity="start"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/pesquisa"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewServicos"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/tdsservicos"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <Button
            android:id="@+id/btAgendar"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:text="@string/texto_botao1"
            android:backgroundTint="@color/teal_700"
            android:padding="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toBottomOf="@id/recyclerViewServicos"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>